k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-login
  labels:
    app: back-login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-login
  template:
    metadata:
      labels:
        app: back-login
    spec:
      containers:
      - name: back-login
        image: <IMAGE>
        volumeMounts:
        - name: app-env-volume
          mountPath: /app/config/app.env
          subPath: app.env
          readOnly: true
        - name: config-json-volume
          mountPath: /app/config/serviceAccountKey.json
          subPath: serviceAccountKey.json
          readOnly: true 
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 64Mi
            cpu: 50m
          limits:
            memory: 128Mi
            cpu: 100m
      volumes:
      - name: app-env-volume
        secret:
          secretName: app-env
          items:
          - key: app.env
            path: app.env
      - name: config-json-volume
        secret:
          secretName: firebase-sakey-json
          items:
          - key: serviceAccountKey.json
            path: serviceAccountKey.json
