k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: back-login-svc
  labels:
    app: back-login
spec:
  type: ClusterIP
  selector:
    app: back-login
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
